--- a/style.css
+++ b/style.css
@@ -348,8 +348,8 @@ body{
 
   @media (max-width: 700px), screen and (orientation: portrait) {
     .work-image{
-      max-width: 320px;
-      max-height: 180px;
+      min-width: 80%;
+      max-height: 80%;
     }
     .side-nav{
       margin-left:0em;
