--- a/style.css
+++ b/style.css
@@ -347,10 +347,6 @@ body{
   }
 
   @media (max-width: 700px), screen and (orientation: portrait) {
-    .work-image{
-      max-width: 100%;
-      max-height: 100%;
-    }
     .side-nav{
       margin-left:0em;
       margin-top:-1em;
@@ -406,10 +402,9 @@ body{
     main{
       float:left;
       width:100%;
-      margin-right:auto;
-      margin-left: auto;
+      margin-right:0em;
       margin-top:-1em;
-      padding-right:0em;
+      padding-right:10%;
     }
 
     .blank{
@@ -419,13 +414,14 @@ body{
     }
 
     .work{
+      width:90%;
       display:block;
       margin-top:1em;
       padding-bottom:1em;
       border-radius: 0.5em;
       filter: grayscale(100%);
-      margin-left: 2em;
-      margin-right: 2em;
+      margin-left:5%;
+      margin-right:5%;
     }
 
     .about{
@@ -435,6 +431,12 @@ body{
 
     .contact{
       margin-left: 2em;
+    }
+
+    .work-image{
+      border-radius: 10px;
+      max-width: 480px;
+      max-height: 270px;
     }
 
     .pic-wall{
@@ -459,8 +461,4 @@ body{
       animation-duration: 0.2s;
     }
   
-    .work-words{
-      width:auto;
-      margin-right:1em;
-    }
   }
