--- a/final/style.css
+++ b/final/style.css
@@ -482,7 +482,7 @@ a:visited{
   }
 
   #minusSymbol{
-    margin-top:2.5em;
+    margin-top:3.25em;
     margin-left:-1.5em;
     color:white;
     font-size: 3em;
@@ -490,6 +490,14 @@ a:visited{
     opacity: 0.2;
     transition: opacity 0.5s ease;
     z-index: -1;
+  }
+
+  #breathCircle1{
+    margin-left:1em;
+  }
+  
+  #breathCircle2{
+    margin-left:-33em;
   }
 
 }
